--- a/modules/openapi-generator/src/main/resources/cpp-tiny/service/api-header.mustache
+++ b/modules/openapi-generator/src/main/resources/cpp-tiny/service/api-header.mustache
@@ -5,7 +5,7 @@
 #include "Response.h"
 #include "Arduino.h"
 #include "Service.h"
-#include "Helpers.h"
+#include "../models/Helpers.h"
 #include <list>
 
 {{#imports}}
