feat: don't add if numeric 0 (to be changed to undefined)

--- a/modules/openapi-generator/src/main/resources/cpp-tiny/model-body-class.mustache
+++ b/modules/openapi-generator/src/main/resources/cpp-tiny/model-body-class.mustache
@@ -130,7 +130,12 @@ bourne::json
     {{^isContainer}}
 
     {{#isPrimitiveType}}
+    {{#isString}}
     if (!{{getter}}().empty())
+    {{/isString}}
+    {{#isNumeric}}
+    if ({{getter}}() > 0)
+    {{/isNumeric}}
         object["{{name}}"] = {{getter}}();
     {{/isPrimitiveType}}
 
