feat: removed ssl insecure

--- a/modules/openapi-generator/src/main/resources/cpp-tiny/service/Service.cpp.mustache
+++ b/modules/openapi-generator/src/main/resources/cpp-tiny/service/Service.cpp.mustache
@@ -77,7 +77,7 @@ void Tiny::Service::begin(std::string url){
 {{/isESP8266}}
 {{#isESP32}}
 void Tiny::Service::begin(std::string url){
-    wifiClient.setInsecure();
+    wifiClient.setCACert(sslCertificate.c_str());
 
     // reset params
     queryParams.begin();
